# b2

./: README.md
b2_bringup/: CMakeLists.txt  package.xml  setup.py
b2_bringup/config/: arduino_params.yaml
b2_bringup/launch/: arms.launch  b2.launch  base.bash  dynamixels.launch  lidar.bash
b2_bringup/nodes/: arm_driver.py  voice.py
my_dynamixel_workbench_tutorial/: CMakeLists.txt  package.xml  single_manager.launch
phoenix_msgs/: CMakeLists.txt  package.xml
phoenix_msgs/action/: AutoDock.action  Voice.action
phoenix_msgs/msg/: Arm_joint.msg  JointState.msg
